# FrameWorkLucasv2

./: .gitignore  LICENSE  README.md  build_deb.sh  fr4meluc-daemon.service  fr4meluc.db  install.sh  motor.py  prompt.md  pyproject.toml
fr4meluc/: __init__.py
fr4meluc/cli/: main.py
fr4meluc/core/: daemon.py  db.py  network.py  parallel.py  parsers.py  pipeline.py  report.py  report_docx.py  report_pdf.py  runner.py  storage.py  ui.py  validation.py  workspace.py
fr4meluc/core/integrations/: jira.py  slack.py  teams.py  webhook.py
fr4meluc/core/tools/: arp_scan.py  enum4linux.py  ffuf.py  gobuster.py  http_server.py  hydra.py  john.py  netcat.py  nikto.py  nmap.py  nuclei.py  peas.py  searchsploit.py  sqlmap.py  wpscan.py
fr4meluc/gui/: app.py  main_window.py  theme.py
fr4meluc/gui/views/: clients.py  dashboard.py  history.py  scan_wizard.py  scheduler.py  settings.py
fr4meluc/gui/widgets/: severity_badge.py  stat_card.py
fr4meluc/memory/: user_context.md
tests/: test_parsers.py  test_pipeline.py  test_storage.py
